--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Andrew Carver</h1>
                         <p class="intro-text">Full Stack Software Engineer
-                            <br>under construction</p>
+                            <br>currently learning at Coding Dojo</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -91,7 +91,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Portfolio</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>Here will be links and examples of projects I have worked on and contributed too.</p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
             </div>
